--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -22,20 +22,24 @@
                                             <Border Height="45" Width="769" Background="#B2111111" Canvas.Top="1" Canvas.Left="-3">
                                                 <TextBlock TextWrapping="Wrap" Text="RMA Details" FontSize="25" Foreground="White" Margin="10,6,351,0"/>
                                             </Border>
-                                            <Label x:Name="lblcRMANumber" Content="RMA Number : " Style="{StaticResource lblConstant}" Canvas.Top="57" Width="143" Canvas.Left="391"/>
-                                            <Label x:Name="lblRMANumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="551" Canvas.Top="59" Width="211" Height="33"/>
+                                            <Label x:Name="lblcRMANumber" Content="RMA Number : " Style="{StaticResource lblConstant}" Canvas.Top="47" Width="143" Canvas.Left="287"/>
+                                            <Label x:Name="lblRMANumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="426" Canvas.Top="49" Width="257" Height="33"/>
 
-                                            <Label x:Name="lblcRMARewDate" Content="RMA Request Date : " Style="{StaticResource lblConstant}" Canvas.Left="341" Canvas.Top="132" Width="193"/>
-                                            <Label x:Name="lblRMAReqDate" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="552" Canvas.Top="135" Width="214" Height="33"/>
+                                            <Label x:Name="lblcRMARewDate" Content="RMA Request Date : " Style="{StaticResource lblConstant}" Canvas.Left="237" Canvas.Top="122" Width="193"/>
+                                            <Label x:Name="lblRMAReqDate" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="427" Canvas.Top="125" Width="256" Height="33"/>
 
-                                            <Label x:Name="lblcVendorNumber" Content="Vendor Number : " Style="{StaticResource lblConstant}" Canvas.Top="95" Width="164" Canvas.Left="371"/>
-                                            <Label x:Name="lblVendorNumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="552" Canvas.Top="97" Width="205" Height="33"/>
+                                            <Label x:Name="lblcVendorNumber" Content="Vendor Number : " Style="{StaticResource lblConstant}" Canvas.Top="85" Width="164" Canvas.Left="267"/>
+                                            <Label x:Name="lblVendorNumber" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="427" Canvas.Top="87" Width="256" Height="33"/>
 
-                                            <Label x:Name="lblcVendorName" Content="Vendor Name : " Style="{StaticResource lblConstant}" Canvas.Top="171" Width="147" Canvas.Left="387"/>
-                                            <Label x:Name="lblVendorName" Content="N/A " Style="{StaticResource lblVeriable}" Canvas.Left="550" Canvas.Top="173" Width="216" Height="33"/>
+                                            <Label x:Name="lblcVendorName" Content="Vendor Name : " Style="{StaticResource lblConstant}" Canvas.Top="161" Width="147" Canvas.Left="283"/>
+                                            <Label x:Name="lblVendorName" Style="{StaticResource lblVeriable}" Canvas.Left="425" Canvas.Top="163" Width="331" Height="62">
+                                                <Label.Content>
+                                                    <TextBlock Text="N/A" Height="60" Width="331" TextWrapping="Wrap"/>
+                                                </Label.Content>
+                                            </Label>
 
-                                            <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="78" Width="127" Canvas.Left="-3"/>
-                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="202" Canvas.Left="136" Canvas.Top="70" Style="{StaticResource combo}" IsReadOnly="True"
+                                            <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="52" Width="127" Canvas.Left="4"/>
+                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="202" Canvas.Left="10" Canvas.Top="85" Style="{StaticResource combo}" IsReadOnly="True"
 													ItemsSource="{Binding RAMStatus}" DisplayMemberPath="Status" SelectedValuePath="ID" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929">
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -48,8 +52,8 @@
                                                 </ComboBox.Background>
                                             </ComboBox>
 
-                                            <Label x:Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="152" Width="97" Canvas.Left="27"/>
-                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="202" Canvas.Left="136" Canvas.Top="152" Style="{StaticResource combo}" IsEnabled="True"
+                                            <Label x:Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="141" Width="97" Canvas.Left="34"/>
+                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="202" Canvas.Left="10" Canvas.Top="170" Style="{StaticResource combo}" IsEnabled="True"
 													ItemsSource="{Binding RAMStatus}" SelectedValuePath="ID" DisplayMemberPath="Status" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929" >
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -594,7 +598,7 @@
                                                 <TextBlock TextWrapping="Wrap" Text="Other Reason" FontSize="25" Foreground="White" Margin="10,4,266,6"/>
                                             </Border>
 
-                                            <TextBox x:Name="txtOtherReason" Height="43" Width="783" Canvas.Top="49" TextWrapping="WrapWithOverflow" Background="{x:Null}" Canvas.Left="4" FontSize="30" />
+                                            <TextBox x:Name="txtOtherReason" Height="43" Width="783" Canvas.Top="49" TextWrapping="WrapWithOverflow" Background="{x:Null}" Canvas.Left="4" FontSize="30"/>
                                             <ComboBox x:Name="cmbOtherReason" ItemsSource="{Binding}" DisplayMemberPath="Reason1" SelectedValuePath="ReasonID" Canvas.Top="95" Width="787" Height="45" SelectedIndex="0" SelectedValue="0" SelectionChanged="cmbOtherReason_SelectionChanged" Foreground="#FF55BFB6" BorderBrush="#FF292828" Style="{StaticResource combo}" Canvas.Left="-1">
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
