--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -507,7 +507,7 @@
                                                             <CheckBox x:Name="cbrDamaged" Style="{StaticResource cbStyleKey}" Content="Item Damaged." Canvas.Left="277" Canvas.Top="-50" 
 													Checked="cbrDamaged_Checked" Unchecked="cbrDamaged_Unchecked" Background="White" Visibility="Hidden" />
                                                             <TextBlock x:Name="txtitemdamage"  Text="Item Damaged."  FontSize="20" Background="Gray" Foreground="WhiteSmoke" Width="289" Height="49" TextAlignment="Center" Canvas.Left="-3" />
-                                                            <Canvas Name="cnvDamage" Height="10" Width="290" Canvas.Left="-3" Canvas.Top="35" Background="#FFC67A3A" />
+                                                            <Canvas Name="cnvDamage" Height="10" Width="290" Canvas.Left="-3" Canvas.Top="40" Background="#FFC67A3A" />
                                                         </Canvas>
                                                     </Border>
                                                 </ContentControl>
@@ -523,7 +523,7 @@
                                                             <CheckBox x:Name="cbrDuplicate" Style="{StaticResource cbStyleKey}" Content="Duplicate Shipment." Canvas.Left="42" Canvas.Top="237"   Margin="13,3,169,30"  Visibility="Hidden"
 													Checked="cbrDuplicate_Checked" Unchecked="cbrDuplicate_Unchecked"/>
                                                             <TextBlock x:Name="txtDuplicate" Text="Duplicate Shipment." Background="Gray" Foreground="WhiteSmoke" FontSize="20" Height="49" Width="290" TextAlignment="Center"></TextBlock>
-                                                            <Canvas Name="cnvDuplicate" Height="10" Width="290" Canvas.Left="-3" Canvas.Top="35" Background="#FFC67A3A" />
+                                                            <Canvas Name="cnvDuplicate" Height="10" Width="290" Canvas.Top="39" Background="#FFC67A3A" />
                                                         </Canvas>
                                                     </Border>
                                                 </ContentControl>
@@ -538,7 +538,7 @@
 													Margin="5,5,269,26"  
 													Checked="cbrIncorrectOrder_Checked" Unchecked="cbrIncorrectOrder_Unchecked"/>
                                                             <TextBlock x:Name="txtinccorectorder" Text="Incorrect item ordered." Background="Gray" Foreground="WhiteSmoke" TextAlignment="Center" FontSize="20" Width="456" Height="49"></TextBlock>
-                                                            <Canvas Name="cnvInccorectorder" Height="10" Width="456" Canvas.Top="36" Background="#FFC67A3A" />
+                                                            <Canvas Name="cnvInccorectorder" Height="10" Width="456" Canvas.Top="39" Background="#FFC67A3A" />
 
                                                         </Canvas>
                                                     </Border>
@@ -554,7 +554,7 @@
                                                             <CheckBox x:Name="cbrDisplayedDiff" Style="{StaticResource cbStyleKey}" Content="Item is different from displayed on web." Canvas.Left="451" Canvas.Top="154" Margin="7,4,286,28" Visibility="Hidden"  
 													Checked="cbrDisplayedDiff_Checked" Unchecked="cbrDisplayedDiff_Unchecked"/>
                                                             <TextBlock x:Name="txtDisplayedOff" Text="Item is different from displayed on web." Foreground="WhiteSmoke" Background="Gray" FontSize="20" TextAlignment="Center" Height="49" Width="457"></TextBlock>
-                                                            <Canvas Name="cnvDisplayedOff" Height="10" Width="460" Canvas.Left="-3" Canvas.Top="32" Background="#FFC67A3A" />
+                                                            <Canvas Name="cnvDisplayedOff" Height="10" Width="460" Canvas.Left="-2" Canvas.Top="38" Background="#FFC67A3A" />
                                                         </Canvas>
                                                     </Border>
                                                 </ContentControl>
@@ -568,7 +568,7 @@
                                                             <CheckBox x:Name="cbrSatisfied" Style="{StaticResource cbStyleKey}" Content="Not satisfied with item." Canvas.Left="450" Canvas.Top="237" Margin="8,6,270,23" 
 													Checked="cbrSatisfied_Checked" Unchecked="cbrSatisfied_Unchecked" Visibility="Hidden"/>
                                                             <TextBlock x:Name="txtSatisfied" FontSize="20" Text="Not satisfied with item." Foreground="WhiteSmoke" Background="Gray" TextAlignment="Center" Width="457" Height="49"></TextBlock>
-                                                            <Canvas Name="cnvSatisfied" Height="10" Width="460" Canvas.Left="-3" Canvas.Top="35" Background="#FFC67A3A" />
+                                                            <Canvas Name="cnvSatisfied" Height="10" Width="460" Canvas.Left="-2" Canvas.Top="39" Background="#FFC67A3A" />
                                                         </Canvas>
                                                     </Border>
                                                 </ContentControl>
@@ -584,7 +584,7 @@
 													Checked="cbrWrong_Checked" 
 													Unchecked="cbrWrong_Unchecked" Visibility="Hidden"/>
                                                             <TextBlock x:Name="txtreceicewrongitem" Text="Received wrong item." FontSize="20" TextAlignment="Center" Background="Gray" Foreground="WhiteSmoke" Height="49" Width="291"></TextBlock>
-                                                            <Canvas Name="cnvRecieve" Height="10" Width="290" Canvas.Left="-3" Canvas.Top="35" Background="#FFC67A3A" />
+                                                            <Canvas Name="cnvRecieve" Height="10" Width="290" Canvas.Top="40" Background="#FFC67A3A" Canvas.Left="1" />
                                                         </Canvas>
                                                     </Border>
                                                 </ContentControl>
@@ -613,21 +613,21 @@
                                     </Border>
                                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="418" Height="56" Width="234" Canvas.Left="556" >
                                         <StackPanel Orientation="Horizontal">
-                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnHomeDone_Click"/>
+                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnHomeDone_Click" Width="59"/>
                                             <Button Style="{StaticResource ToolBarButtonBaseStyle}"
                                     			x:Name="btnHomeDone"
                                     			Content="Done" 
-                                    			Click="btnHomeDone_Click" Width="157"  />
+                                    			Click="btnHomeDone_Click" Width="169"  />
                                         </StackPanel>
                                     </Border>
 
                                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="418" Height="56" Width="218" >
                                         <StackPanel Orientation="Horizontal">
-                                            <Image Style="{StaticResource btnImage}"  MouseDown="btnback_Click" Source="/KrausRGA;component/Images/bac.png"/>
+                                            <Image Style="{StaticResource btnImage}"  MouseDown="btnback_Click" Source="/KrausRGA;component/Images/bac.png" Width="36"/>
                                             <Button Style="{StaticResource ToolBarButtonBaseStyle}"
                                     			x:Name="btnback"
                                     			Content="Back" 
-                                    			Click="btnback_Click"  Width="145"  />
+                                    			Click="btnback_Click"  Width="179"  />
                                         </StackPanel>
                                     </Border>
 
