--- a/KrausxRGA/App.xaml
+++ b/KrausxRGA/App.xaml
@@ -105,7 +105,7 @@
                     <ControlTemplate TargetType="{x:Type ButtonBase}">
                         <Border 
                     x:Name="Border"  
-                    BorderThickness="2"
+                    BorderThickness="1"
                     Background="{x:Null}"
                     BorderBrush="Transparent">
                             <ContentPresenter 
@@ -119,16 +119,16 @@
                             <!-- Additional triggers removed, e.g "IsMouseOver" -->
                             <!-- You may not want any at all -->
                             <Trigger Property="IsFocused" Value="true">
-                                <Setter TargetName="Border" Property="Background" Value="#FF3B8312" />
-                                <Setter TargetName="Border" Property="BorderBrush" Value="#FF3B8312" />
+                                <Setter TargetName="Border" Property="Background" Value="#FF831212" />
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#606060" />
                             </Trigger>
                             <Trigger Property="IsMouseOver" Value="true">
-                                <Setter TargetName="Border" Property="Background" Value="#FF3B8312" />
-                                <Setter TargetName="Border" Property="BorderBrush" Value="#FF3B8312" />
+                                <Setter TargetName="Border" Property="Background" Value="#FF831212" />
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#606060" />
                             </Trigger>
                             <Trigger Property="IsPressed" Value="true">
                                 <Setter TargetName="Border" Property="Background" Value="#FF831212" />
-                                <Setter TargetName="Border" Property="BorderBrush" Value="#FF3B8312" />
+                                <Setter TargetName="Border" Property="BorderBrush" Value="#606060" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
